--- a/modules/offered_insurance/locale/fr.po
+++ b/modules/offered_insurance/locale/fr.po
@@ -32,6 +32,10 @@ msgctxt "error:offered.exclusion:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
 
+msgctxt "error:offered.item.description:"
+msgid "The code must be unique!"
+msgstr "Le code doit être unique !"
+
 msgctxt "error:offered.option.description:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
@@ -359,7 +363,7 @@ msgstr "Nom"
 
 msgctxt "field:insurer.delegation,write_date:"
 msgid "Write Date"
-msgstr "Modifié par"
+msgstr "Date de mise à jour"
 
 msgctxt "field:insurer.delegation,write_uid:"
 msgid "Write User"
@@ -389,6 +393,10 @@ msgctxt "field:offered.exclusion,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
+msgctxt "field:offered.exclusion,groups:"
+msgid "Groups"
+msgstr "Groupes"
+
 msgctxt "field:offered.exclusion,id:"
 msgid "ID"
 msgstr "ID"
@@ -416,6 +424,46 @@ msgstr "Mis à jour par"
 msgctxt "field:offered.exclusion,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
+
+msgctxt "field:offered.exclusion-res.group,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:offered.exclusion-res.group,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:offered.exclusion-res.group,create_uid:"
+msgid "Create User"
+msgstr "Crée par
+
+msgctxt "field:offered.exclusion-res.group,exclusion_kind:"
+msgid "Exclusion Kind"
+msgstr "Type d'exclusion"
+
+msgctxt "field:offered.exclusion-res.group,group:"
+msgid "Group"
+msgstr "Groupe"
+
+msgctxt "field:offered.exclusion-res.group,id:"
+msgid "ID"
+msgstr "Identifiant"
+
+msgctxt "field:offered.exclusion-res.group,rec_name:"
+msgid "Record Name"
+msgstr "Numéro"
+
+msgctxt "field:offered.exclusion-res.group,write_date:"
+msgid "Write Date"
+msgstr "Date de modification"
+
+msgctxt "field:offered.exclusion-res.group,write_uid:"
+msgid "Write User"
+msgstr "Modifié par"
+
+msgctxt "field:offered.exclusion-res.group,xml_id:"
+msgid "XML Id"
+msgstr "XML Id"
 
 msgctxt "field:offered.item.description,code:"
 msgid "Code"
@@ -958,7 +1006,7 @@ msgid "XML Id"
 msgstr "Identifiant XML"
 
 msgctxt "help:covered_element.end_reason,tags:"
-msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
+msgid "Add and search all related configuration objects based on a tag"
 msgstr ""
 "Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
 "l'ensemble des objets de configuration liés à un même label."
@@ -966,6 +1014,20 @@ msgstr ""
 msgctxt "help:extra_data,selection:"
 msgid "A couple of key and label separated by \":\" per line"
 msgstr "Un couple de clé, valeur séparaé par un \":\" par ligne"
+
+msgctxt "help:offered.exclusion,groups:"
+msgid "Exclusion kind groups"
+msgstr "Groupes de type d'exclusion"
+
+msgctxt "help:offered.item.description,code:"
+msgid ""
+"The string that will be used to identify this record across the "
+"configuration. It should not be modified without checking first if it is "
+"used somewhere"
+msgstr ""
+"La chaîne qui sera utilisée pour identifier cet enregistrement dans la "
+"configuration. Il ne doit pas être modifié sans vérifier au préalable s'il "
+"est utilisé quelque part"
 
 msgctxt "help:offered.item.description,extra_data_rec_name:"
 msgid ""
@@ -975,6 +1037,10 @@ msgstr ""
 "Si coché, la valeur de la donnée complémentaire sera affichée dans le nom "
 "d'enregistement de l'élément couvert"
 
+msgctxt "help:offered.item.description,name:"
+msgid "The name that will be displayed to the end user"
+msgstr "Le nom qui sera affiché à l'utilisateur"
+
 msgctxt "help:offered.item.description,show_name:"
 msgid ""
 "If checked, the name will be showed on the covered element, allowing the "
@@ -983,7 +1049,7 @@ msgstr ""
 "Si coché, le nom sur l'élément couvert sera affiché et pourra être édité"
 
 msgctxt "help:offered.item.description,tags:"
-msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
+msgid "Add and search all related configuration objects based on a tag"
 msgstr ""
 "Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
 "l'ensemble des objets de configuration liés à un même label."
@@ -1096,6 +1162,10 @@ msgctxt "model:offered.exclusion,name:"
 msgid "Exclusion Kind"
 msgstr "Type d'exclusion"
 
+msgctxt "model:offered.exclusion-res.group,name:"
+msgid "Exclusion Kind Group"
+msgstr "Groupe de types d'exclusion"
+
 msgctxt "model:offered.item.description,name:"
 msgid "Item Description"
 msgstr "Description du Risque"
@@ -1141,19 +1211,11 @@ msgid "Product Validation Batch"
 msgstr "Batch de validation produit"
 
 msgctxt "model:rule_engine,description:option_end_date_rule"
-msgid "The end rule is based on the insured age.\n"
-"The coverage will terminate at age of ${max_age_for_option} (included).\n"
-"${'The age used is the age at subscription' if age_kind =='real' else "
-"('The age is synchonized with the %s day of the %s month' % (given_day, "
-"given_month) if age_kind == 'at_given_day_of_year' else 'The age used is "
-"based on the first day of the month following the birth')}."
-msgstr "La règle de résiliation est basée sur l'âge de l'assuré.\n"
+msgid ""
+msgstr ""
+"La règle de résiliation est basée sur l'âge de l'assuré.\n"
 "La résiliation de la garantie se fera à l'âge de ${max_age_for_option} (inclus).\n"
-"${'L âge utilisé est l âge à la date de souscription' if age_kind =='real' "
-"else ('L âge utilisé est l âge synchronisé par rapport au jour %s et au "
-"mois %s' % (given_day, given_month) if age_kind == 'at_given_day_of_year' "
-"else 'L âge est l aĝe au premier jour du mois suivant le mois de "
-"naissance.')}"
+"${'L âge utilisé est l âge à la date de souscription' if age_kind =='real' else ('L âge utilisé est l âge synchronisé par rapport au jour %s et au mois %s' % (given_day, given_month) if age_kind == 'at_given_day_of_year' else 'L âge est l aĝe au premier jour du mois suivant le mois de naissance.')}"
 
 msgctxt "model:rule_engine,name:option_end_date_rule"
 msgid "Option End Date Rule"
