--- a/modules/offered_insurance/doc/en/CHANGELOG
+++ b/modules/offered_insurance/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#11912 Manage exclusions right access
+
 Version 2.4 - 2019-04-12
 * BUG#10695 Check if an option was already subscribed by the subscriber of the contract
 * BUG#10779 Fix domain on extra data definitions
