offered: improve package functionnality (#2906)
Fix # 11920

--- a/modules/contract/locale/fr.po
+++ b/modules/contract/locale/fr.po
@@ -878,6 +878,10 @@ msgctxt "field:contract.option,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "field:contract.option.terminate,id:"
+msgid "ID"
+msgstr "Identifiant"
+
 msgctxt "field:contract.option.version,contract_status:"
 msgid "Contract Status"
 msgstr "Statut du contrat"
@@ -1423,8 +1427,8 @@ msgctxt "help:offered.product,contract_data_rule:"
 msgid ""
 "Rule called at contract creation in order to initialize any contract field"
 msgstr ""
-"Règle appelée à la création du contrat permettant d'initialiser des "
-"données du contrat"
+"Règle appelée à la création du contrat permettant d'initialiser des données "
+"du contrat"
 
 msgctxt "help:offered.product,quote_number_sequence:"
 msgid "Sequence used to compute the quote number on the contract"
@@ -1547,6 +1551,10 @@ msgctxt "model:contract.wizard.option_subscription.select_package,name:"
 msgid "Select Package"
 msgstr "Choisir la formule"
 
+msgctxt "model:event.type,name:automatic_terminate_option"
+msgid "Option Terminate Automatically"
+msgstr "Résiliation de garantie automatique"
+
 msgctxt "model:event.type,name:event_activate_contract"
 msgid "Activate Contract"
 msgstr "Activation du contrat"
@@ -1578,10 +1586,6 @@ msgstr "Résiliation du contrat"
 msgctxt "model:event.type,name:event_unhold_contract"
 msgid "Unhold Contract"
 msgstr "Remise en vigueur après suspension"
-
-msgctxt "model:event.type,name:automatic_terminate_option"
-msgid "Option Terminate Automatically"
-msgstr "Résiliation de garantie automatique"
 
 msgctxt "model:event.type,name:event_void_contract"
 msgid "Void Contract"
@@ -2170,6 +2174,11 @@ msgid "Cancel"
 msgstr "Annuler"
 
 msgctxt ""
-"wizard_button:contract.wizard.option_subscription,select_package,options_displayer:"
-msgid "Next"
-msgstr "Suivant"
+"wizard_button:contract.wizard.option_subscription,select_package,set_package:"
+msgid "Apply Package"
+msgstr "Appliquer la formule"
+
+msgctxt ""
+"wizard_button:contract.wizard.option_subscription,select_package,set_package_and_customize_option:"
+msgid "Apply Package and Customize Options"
+msgstr "Appliquer la formule et personnaliser les options"
