--- a/modules/contract_insurance/locale/fr.po
+++ b/modules/contract_insurance/locale/fr.po
@@ -21,8 +21,7 @@ msgstr ""
 "début et de fin chevauchent un autre élément couvert pour le même tiers"
 
 msgctxt "error:contract.covered_element:"
-msgid ""
-"You are trying to create duplicate covered elements on contract: %s"
+msgid "You are trying to create duplicate covered elements on contract: %s"
 msgstr ""
 "Vous essayez de créer un doublon d'éléments couverts sur le contrat: %s"
 
@@ -236,6 +235,10 @@ msgctxt "field:contract.covered_element,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:contract.covered_element,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
 msgctxt "field:contract.covered_element,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -379,6 +382,10 @@ msgstr "Date de mise à jour"
 msgctxt "field:contract.covered_element,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
+
+msgctxt "field:contract.covered_element,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "field:contract.covered_element-party,covered_element:"
 msgid "Covered Element"
@@ -895,11 +902,6 @@ msgctxt ""
 msgid "Covered Element"
 msgstr "Risque Couvert"
 
-msgctxt ""
-"field:contract.wizard.option_subscription.options_displayer,hide_covered_element:"
-msgid "Hide Covered Element"
-msgstr "Cacher le risque couvert"
-
 msgctxt "field:contract.wizard.option_subscription.options_displayer,party:"
 msgid "Party"
 msgstr "Tiers"
@@ -908,6 +910,41 @@ msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer,possible_covered_elements:"
 msgid "Covered Elements"
 msgstr "Risques Couverts"
+
+msgctxt ""
+"field:contract.wizard.option_subscription.select_package,covereds_package:"
+msgid "Package per Covered"
+msgstr "Formule par élément couvert"
+
+msgctxt ""
+"field:contract.wizard.option_subscription.select_package,select_package_per_covered:"
+msgid "Select Package Per Covered"
+msgstr "Selection de la formule par élément couvert"
+
+msgctxt ""
+"field:contract.wizard.option_subscription.select_package_per_covered,covered:"
+msgid "Covered Element"
+msgstr "Elements Couvert"
+
+msgctxt ""
+"field:contract.wizard.option_subscription.select_package_per_covered,id:"
+msgid "ID"
+msgstr "Identifiant"
+
+msgctxt ""
+"field:contract.wizard.option_subscription.select_package_per_covered,main_selection_screen:"
+msgid "Main Selection Screen"
+msgstr "Sélection des formules"
+
+msgctxt ""
+"field:contract.wizard.option_subscription.select_package_per_covered,package:"
+msgid "Package"
+msgstr "Formules"
+
+msgctxt ""
+"field:contract.wizard.option_subscription.select_package_per_covered,possible_packages:"
+msgid "Possible Packages"
+msgstr "Formules possibles"
 
 msgctxt "field:party.party,covered_elements:"
 msgid "Covered Elements"
@@ -1000,6 +1037,11 @@ msgstr "Garantie"
 msgctxt "model:contract.service,name:"
 msgid "Contract Service"
 msgstr "Prestation Fournie"
+
+msgctxt ""
+"model:contract.wizard.option_subscription.select_package_per_covered,name:"
+msgid "Select Package Per Covered"
+msgstr "Selection de la formule par élément couvert"
 
 msgctxt "model:ir.action,name:"
 msgid "Status History"
@@ -1245,8 +1287,3 @@ msgctxt ""
 "wizard_button:contract.wizard.option_subscription,select_package,end:"
 msgid "Cancel"
 msgstr "Annuler"
-
-msgctxt ""
-"wizard_button:contract.wizard.option_subscription,select_package,options_displayer:"
-msgid "Next"
-msgstr "Suivant"
