--- a/modules/offered/locale/fr.po
+++ b/modules/offered/locale/fr.po
@@ -51,6 +51,10 @@ msgid "The code must be unique!"
 msgstr "Le code doit être unique"
 
 msgctxt "error:offered.package:"
+msgid "Subscribe by package is only available on quote"
+msgstr "La souscription par formule n'est disponible que sur un devis"
+
+msgctxt "error:offered.package:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique !"
 
@@ -576,6 +580,10 @@ msgctxt "field:offered.package,name:"
 msgid "Name"
 msgstr "Nom"
 
+msgctxt "field:offered.package,option_relations:"
+msgid "Option Relations"
+msgstr "Options"
+
 msgctxt "field:offered.package,options:"
 msgid "Options"
 msgstr "Options"
@@ -607,6 +615,14 @@ msgstr "Creation date"
 msgctxt "field:offered.package-option.description,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
+
+msgctxt "field:offered.package-option.description,extra_data:"
+msgid "Extra Data"
+msgstr "Données Complémentaires"
+
+msgctxt "field:offered.package-option.description,extra_data_summary:"
+msgid "Extra Data Summary"
+msgstr "Résumé des données complémentaires"
 
 msgctxt "field:offered.package-option.description,id:"
 msgid "ID"
@@ -945,7 +961,7 @@ msgstr ""
 "complémentaires lors de l'affichage utilisateur"
 
 msgctxt "help:extra_data,tags:"
-msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
+msgid "Add and search all related configuration objects based on a tag"
 msgstr ""
 "Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
 "l'ensemble des objets de configuration liés à un même label."
@@ -957,6 +973,16 @@ msgid ""
 msgstr ""
 "Si coché, les modèles de courriers utiliseront le style par défaut de Coog "
 "s'il n'y a pas de style défini sur le produit"
+
+msgctxt "help:offered.option.description,code:"
+msgid ""
+"The string that will be used to identify this record across the "
+"configuration. It should not be modified without checking first if it is "
+"used somewhere"
+msgstr ""
+"Le code qui sera utilisé pour identifier cet enregistrement de manière "
+"unique dans la base. Il ne doit pas être modifié sans s'être assuré de son "
+"utilisation."
 
 msgctxt "help:offered.option.description,ending_rule:"
 msgid "Rule that returns a date which defines when the contract will end"
@@ -980,6 +1006,10 @@ msgstr ""
 "souscription de la garantie. Ces données sont utilisables par le moteur de "
 "règle. Elles seront versionnées et stockées au niveau de l'option."
 
+msgctxt "help:offered.option.description,name:"
+msgid "The name that will be displayed to the end user"
+msgstr "Nom qui sera affiché à l'utilisateur"
+
 msgctxt "help:offered.option.description,options_excluded:"
 msgid ""
 "If one of these options is already subscribed, it will not be possible to "
@@ -1002,10 +1032,34 @@ msgstr ""
 "Définit comment une garantie est initialisée et requise à la souscription"
 
 msgctxt "help:offered.option.description,tags:"
-msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
+msgid "Add and search all related configuration objects based on a tag"
 msgstr ""
 "Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
 "l'ensemble des objets de configuration liés à un même label."
+
+msgctxt "help:offered.package,code:"
+msgid ""
+"The string that will be used to identify this record across the "
+"configuration. It should not be modified without checking first if it is "
+"used somewhere"
+msgstr ""
+"Le code qui sera utilisé pour identifier cet enregistrement de manière "
+"unique dans la base. Il ne doit pas être modifié sans s'être assuré de son "
+"utilisation."
+
+msgctxt "help:offered.package,name:"
+msgid "The name that will be displayed to the end user"
+msgstr "Nom qui sera affiché à l'utilisateur"
+
+msgctxt "help:offered.product,code:"
+msgid ""
+"The string that will be used to identify this record across the "
+"configuration. It should not be modified without checking first if it is "
+"used somewhere"
+msgstr ""
+"Le code qui sera utilisé pour identifier cet enregistrement de manière "
+"unique dans la base. Il ne doit pas être modifié sans s'être assuré de son "
+"utilisation."
 
 msgctxt "help:offered.product,contract_generator:"
 msgid "If empty, contract numbers will have to be manually set"
@@ -1030,8 +1084,9 @@ msgstr ""
 
 msgctxt "help:offered.product,extra_data_def:"
 msgid ""
-"List of extra data that will be requested to subscribe a contract. These data can "
-"be used in rule engine and will be versioned and stored on the contract"
+"List of extra data that will be requested to subscribe a contract. These "
+"data can be used in rule engine and will be versioned and stored on the "
+"contract"
 msgstr ""
 "Liste des données complémentaires qui seront demandées à la souscription "
 "d'un contrat. Ces données peuvent être utilisées dans le moteur de règle et "
@@ -1040,6 +1095,10 @@ msgstr ""
 msgctxt "help:offered.product,icon:"
 msgid "This icon will be used to quickly identify the product"
 msgstr "Cette icône sera utilisée afin de rapidement identifier le produit"
+
+msgctxt "help:offered.product,name:"
+msgid "The name that will be displayed to the end user"
+msgstr "Nom qui sera affiché à l'utilisateur"
 
 msgctxt "help:offered.product,report_templates:"
 msgid "Report templates available for this product"
@@ -1052,7 +1111,7 @@ msgstr ""
 " morale ou les deux)"
 
 msgctxt "help:offered.product,tags:"
-msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
+msgid "Add and search all related configuration objects based on a tag"
 msgstr ""
 "Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
 "l'ensemble des objets de configuration liés à un même label."
