--- a/modules/offered_insurance/locale/fr.po
+++ b/modules/offered_insurance/locale/fr.po
@@ -41,6 +41,15 @@ msgid "The code must be unique!"
 msgstr "Le code doit être unique"
 
 msgctxt "error:offered.product:"
+msgid ""
+"Extra data \"%(extra_data)s\" set on package \"%(package)s\" is not "
+"compatible with package defined per covered option"
+msgstr ""
+"La donnée complémentaire \"%(extra_data)s\" définie sur la  formule "
+"\"%(package)s\" est incompatible avec l'option Formule définie par élément "
+"couvert"
+
+msgctxt "error:offered.product:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique"
 
@@ -865,6 +874,10 @@ msgctxt "field:offered.product,packages:"
 msgid "Packages"
 msgstr "Formules"
 
+msgctxt "field:offered.product,packages_defined_per_covered:"
+msgid "Package defined per covered"
+msgstr "Formule définie par élément couvert"
+
 msgctxt "field:offered.product,rec_name:"
 msgid "Name"
 msgstr "Nom"
@@ -1082,6 +1095,14 @@ msgid "If True, it is be possible to add extra premiums to subscribed options"
 msgstr ""
 "Si vrai, il est possible d'ajouter des surprimes sur les options souscrites"
 
+msgctxt "help:offered.product,packages_defined_per_covered:"
+msgid ""
+"If set, each covered will have to select a package. Else the selection will "
+"be unique for all covered"
+msgstr ""
+"Si défini, chaque élément couvert pourra choisir une formule. Dans le cas "
+"contraire, la formule sera unique pour l'ensemble du contrat"
+
 msgctxt "model:covered_element.end_reason,name:"
 msgid "End reasons for covered elements"
 msgstr "Raison de fin de couverture"
@@ -1212,6 +1233,9 @@ msgstr "Batch de validation produit"
 
 msgctxt "model:rule_engine,description:option_end_date_rule"
 msgid ""
+"The end rule is based on the insured age.\n"
+"The coverage will terminate at age of ${max_age_for_option} (included).\n"
+"${'The age used is the age at subscription' if age_kind =='real' else ('The age is synchonized with the %s day of the %s month' % (given_day, given_month) if age_kind == 'at_given_day_of_year' else 'The age used is based on the first day of the month following the birth')}."
 msgstr ""
 "La règle de résiliation est basée sur l'âge de l'assuré.\n"
 "La résiliation de la garantie se fera à l'âge de ${max_age_for_option} (inclus).\n"
