--- a/modules/offered/doc/fr/CHANGELOG
+++ b/modules/offered/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11920 Amélioration de la fonctionnalité Formule sur un produit. Les formules peuvent être définie au global sur un contrat ou par élément couvert. De plus, les données complémentaires du contrat/des éléments couverts/options peuvent être prédéfinies au niveau d'une formule.
 * BUG#12020 Correction de l'aide sur le champ Domaine sur la définition de la donnée complémentaire
 * FEA#11812 API de description d'un produit
 * FEA#11837 Ajout d'une séquence pour l'ordre des données complémentaires
