offered_insurance: Impossible to use rules base on subscriber country code when using quotation.calculate APIs (#2929)
* offered_insurance: Impossible to use rules base on subscriber country code when using quotation.calculate APIs

--- a/modules/offered_insurance/doc/en/CHANGELOG
+++ b/modules/offered_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12088 Impossible to use rules base on subscriber country code when using quotation.calculate APIs
 * FEA#11912 Manage exclusions right access
 
 Version 2.4 - 2019-04-12
