--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12129 Add automatic deletion of draft and validate invoices that follow a unique posted invoice we are cancelling
 * BUG#12041 Fix the numbering of the invoice against balance batch
 * BUG#11869 Select id should return a tuple to be compliant
 * OTH#00000 Iteration to allow override of the repositioning payment date computation when failing payment
