--- a/modules/offered_insurance/doc/fr/CHANGELOG
+++ b/modules/offered_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12120 Correctif sur la méthode du moteur de règle: option déja souscrite
 * BUG#12088 Impossibilité d'évaluer les règles nécessitant le code du pays via API de tarification
 * FEA#11912 Gérer des droits d'accès sur les exclusions
 
