--- a/modules/offered_eligibility/locale/fr.po
+++ b/modules/offered_eligibility/locale/fr.po
@@ -72,13 +72,13 @@ msgstr "Règle d'éligbilité à la garantie"
 
 msgctxt "model:rule_engine,description:option_eligibility_on_age"
 msgid "The eligibility rule is based on the insured birth date.\n"
-"The maximum age is ${max_age_for_option} (included).\n"
+"The maximum age is ${max_age_for_option} (age not eligible).\n"
 "${'The age used is the age at subscription' if age_kind =='real' else "
 "('The age is synchonized with the %s day of the %s month' % (given_day, "
 "given_month) if age_kind == 'at_given_day_of_year' else 'The age used is "
 "based on the first day of the month following the birth')}."
 msgstr "La règle d'éligibilité est basé sur l'âge de l'assuré.\n"
-"L'âge maximum est ${max_age_for_option} (inclus).\n"
+"L'âge maximum est ${max_age_for_option} (age non éligibile).\n"
 "${'L âge utilisé est l âge à la date de souscription' if age_kind =='real' "
 "else ('L âge utilisé est l âge synchronisé par rapport au jour %s et au "
 "mois %s' % (given_day, given_month) if age_kind == 'at_given_day_of_year' "
@@ -206,8 +206,8 @@ msgid "Age kind for eligibility rule"
 msgstr "Type d'age pour la règle d'éligibilité"
 
 msgctxt "model:rule_engine.rule_parameter,string:option_max_age"
-msgid "Maximum age for option (age included)"
-msgstr "Age maximum pour l'option (age inclu)"
+msgid "Maximum age for option (age not eligible)"
+msgstr "Age maximum pour l'option (age non éligible)"
 
 msgctxt "selection:rule_engine,type_:"
 msgid "Eligibility"
