--- a/modules/contract_insurance_invoice/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12026 Correction de l'assistant de lettrage : perte et profits n'est pas toujours requis
 * BUG#12129 Ajout de la suppression automatique des quittances validées et brouillons qui suivent l'unique quittance que l'on annule
 * BUG#12041 Correction du batch de numérotation pour le quittancement pour épuisement trop perçu
 * BUG#11869 Le select id doit retourner un tuple to be conforme
