--- a/modules/rule_engine/doc/fr/CHANGELOG
+++ b/modules/rule_engine/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Correction d'une erreur lors de l'ajout d'un log de débuggage quand il n'y a pas de rec_name défini sur l'objet
 * FEA#11782 Permettre d'utiliser des expressions genshi dans la description fonctionnelle de la règle dans le but d'utiliser les paramètres de la règle dans le paramétrage.
 * FEA#11543 Ajout d'un champ description sur une règle afin de renseigner une description fonctionnelle de l'algorithme.
 * BUG#11550 Levée de la vérification des droits lors de la création des logs d'exécution du moteur de règle
