endorsement_party: Add start endorsement button in toolbar on party (#2941)
Fix #12151

--- a/modules/endorsement_party/doc/fr/CHANGELOG
+++ b/modules/endorsement_party/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12151 Ajout du bouton "Lancer un avenant" directement dans le menu sur un tiers (comme ce qui existe sur un contrat)
 * OTH#10851 Iteration sur la vérification des adresses en fonction de la configuration du pays
 
 Version 2.4 - 2019-04-12
