--- a/modules/endorsement_party/doc/en/CHANGELOG
+++ b/modules/endorsement_party/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12151 Add start endorsement button in toolbar on party (like for contract)
 * OTH#10851 Iteration on address checks according to the country configuration
 
 Version 2.4 - 2019-04-12
