--- a/modules/health/doc/fr/CHANGELOG
+++ b/modules/health/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12036 Vérifier qu’une relation existe dans la liste des relations du tiers, sinon renvoyer 0
 * OTH#0000 L'affichage du rang de naissance est déplacé après la saisie du numéro de sécurité sociale.
 
 Version 2.4 - 2019-04-12
