party_birth_data: Update birth country from ssn (#2916)
Fix #12044

--- a/modules/party_birth_data/doc/en/CHANGELOG
+++ b/modules/party_birth_data/doc/en/CHANGELOG
@@ -1,2 +1,3 @@
+* BUG#12044 Update birth country from SSN
 * FEA#11631 Add unit tests if party_ssn is installed
 * FEA#11631 Add birth town on person record
