--- a/modules/party_birth_data/doc/fr/CHANGELOG
+++ b/modules/party_birth_data/doc/fr/CHANGELOG
@@ -1,2 +1,3 @@
+* BUG#12044 Mise à jour du pays de naissance depuis le NIR
 * FEA#11631 Ajout des tests unitaires si le module party_ssn est installé
 * FEA#11631 Ajout de la commune de naissance pour une partie
