questionnaire: Multi Part, backoffice management (#2858)
Fix #11785

--- a/modules/questionnaire/doc/fr/CHANGELOG
+++ b/modules/questionnaire/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11785 Intégration des questionnaires de recueil de besoin lors du parcours de vente dans Coog
 * BUG#11551 Renommer le point d'entrée questionnaire
 
 Version 2.4 - 2019-04-12
