--- a/modules/questionnaire/doc/en/CHANGELOG
+++ b/modules/questionnaire/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11785 Backoffice questionnaire management, multipart questionnaires
 * BUG#11551 Rename Questionnaire entry point
 
 Version 2.4 - 2019-04-12
