--- a/modules/claim_salary_fr/doc/fr/CHANGELOG
+++ b/modules/claim_salary_fr/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12134 Correction du calcul du prorata pour les modes de salaire non mensuels
 * BUG#12038 Correction du comportement des avenants pour le champ "Revalorisation sur le traitement de base"
 * BUG#11767 Mise à jour et contrôle des contenus des tables créées par défaut
 
