contract: Add subscription API (#2954)
Fix #11970

--- a/modules/contract/doc/en/CHANGELOG
+++ b/modules/contract/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11970 Add subscribe_contract API
 * BUG#12036 Take into account the quote status inthe calculation of is_active_at_date in order to activate the contract
 * FEA#11698 Add coverage configuration and batch to automatically terminate contract options which the automatic end date is exceeded
 * BUG#11523 Manage void options in order to reactivate correctly void contrat
