--- a/modules/contract/doc/fr/CHANGELOG
+++ b/modules/contract/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11970 Ajout de l'API de souscription de contrat
 * BUG#12036 Prendre en compte le statut de contrat de type devis dans le calcul de is_active_at_date pour activer le contrat
 * FEA#11698 Ajout d'un batch et de configuration sur les paramétrages de garantie afin d'automatiquement résilier les garanties dont la date automatique de fin est dépassée
 * BUG#11523 Modification de la gestion des garanties qui sont aux status "sans effet" lors de la réactivation d'un contrat
