api: Fix tests after schema updates (#2960)
Fix #0000

--- a/modules/api/doc/fr/CHANGELOG
+++ b/modules/api/doc/fr/CHANGELOG
@@ -1,1 +1,2 @@
+* OTH#00000 Correction des tests suite à la mise à jour des schemas
 * FEA#10924 Ajout d'une structure permettant de gérer des APIs métier
