third_party_protocol_almerys: Flux retour V3 (#2930)

--- a/modules/third_party_protocol_almerys/doc/fr/CHANGELOG
+++ b/modules/third_party_protocol_almerys/doc/fr/CHANGELOG
@@ -1,3 +1,2 @@
-* OTH#00000 Suppression d'un espace erroné dans la configuration d'un champ sélection
+* FEA#11997: Gestion des retour almerys
 * FEA#11526: Création du module
-
