--- a/modules/global_tests/doc/en/CHANGELOG
+++ b/modules/global_tests/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#0000 Initialize API tests in new_db script
+
 Version 2.4 - 2019-04-12
 * OTH#0000 Post Pasrau slip to generate dsn message: Add dsn configuration
 * FEA#10308 Do not install contract set and endorsement process related modules
