contract_insurance_invoice: Test dynamic billing modes (#2962)
Ref #11728

--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11728 Add tests on dynamic billing modes
 * OTH#00000 Fix product documentation following FEA11728
 * BUG#12026 Fix reconciliation wizard : write off is not always required
 * BUG#12129 Add automatic deletion of draft and validate invoices that follow a unique posted invoice we are cancelling
