document_request_electronic_signature: Add more information in context when generating a document to find a signer for the electronic signature in some cases (#2967)
Fix #12198

--- a/modules/document_request_electronic_signature/doc/fr/CHANGELOG
+++ b/modules/document_request_electronic_signature/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12198 Ajout d'information supplémentaire dans le contexte pour pouvoir retrouver le signataire du document électronique dans certains cas
 * BUG#11679 Correction d'un crash lors de la génération des documents
 
 Version 2.4 - 2019-04-12
