--- a/modules/document_request_electronic_signature/doc/en/CHANGELOG
+++ b/modules/document_request_electronic_signature/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12198 Add more information in context when generating a document to find a signer for the electronic signature in some cases
 * BUG#11679 Crash when generating a document requesting electronic signature
 
 Version 2.4 - 2019-04-12
