--- a/modules/commission_insurance/doc/en/CHANGELOG
+++ b/modules/commission_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12166 Fix new cases for commission simulation wizard
 * BUG#11276 get_void_premium: init value with Decimal
 
 Version 2.4 - 2019-04-12
