--- a/modules/commission_insurance/doc/fr/CHANGELOG
+++ b/modules/commission_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12166 Correction de nouveaux cas pour le simulateur de commission
 * BUG#11276 get_void_premium: Initialiser les valeurs avec Decimal
 
 Version 2.4 - 2019-04-12
