--- a/modules/third_party_protocol_almerys/doc/en/CHANGELOG
+++ b/modules/third_party_protocol_almerys/doc/en/CHANGELOG
@@ -1,2 +1,4 @@
+* OTH#00000: Updates on flux v3 file batch
 * FEA#11997: Almerys Return
+* OTH#00000: Remove space from selection field configuration
 * FEA#11526: Module Creation
